=Version 0.1.0 [NOT YET RELEASED]=
  * added erlang:nodes () info.

=Version 0.0.0=
  * Initial version.