@@ -1,5 +1,6 @@
 mnesia:system_info and mnesia:table_info
-erlang:nodes
+current directory
+
 monitor pids and clean up state table
 monitor ports and clean up state table
   no erlang:monitor for ports, but could create a seperate process 
